samples/_failures_safe/1761269647_1bbcd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e8d6e1c.c: In function ‘main’:
./samples/SAFE/__tmp_9e8d6e1c.c:152:66: error: expected ‘)’ at end of input
  152 |         int weight = get_valid_int("  Weight (0-1000): ", 0, 1000
      |                                   ~                              ^
      |                                                                  )
./samples/SAFE/__tmp_9e8d6e1c.c:152:9: error: expected declaration or statement at end of input
  152 |         int weight = get_valid_int("  Weight (0-1000): ", 0, 1000
      |         ^~~
./samples/SAFE/__tmp_9e8d6e1c.c:152:9: error: expected declaration or statement at end of input
